# TrampHook

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
include/TrampHook/: TrampHook.h
src/: TrampHook.cpp  opcodes.h
